<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name" translatable="false">MyStockHawk</string>
    <string name="app_label">Stock Hawk</string>
    <string name="action_settings">Settings</string>

    <string name="quote_server_status_key" translatable="false">quote_server_status_key</string>

    <!-- Empty Weather Database -->
    <string name="empty_quote_list">No stock quote available. Click the button to add a stock</string>
    <string name="empty_quote_list_no_network">No stock quote available. The network is not available to fetch data.</string>
    <string name="empty_quote_list_server_down">No stock quote available. The server is not returning data.</string>
    <string name="empty_quote_list_server_error">No stock quote available. The server is not returning valid data. Please check for an updated version.</string>
    <string name="empty_quote_list_server_invalid">The server is not returning valid data. Please check for an updated version.</string>
    <string name="empty_invalid_symbol">No quote server available. The symbol is not recognized by the quote server.</string>
     <string name="empty_encoding_failure">Failed to encode query</string>
    <string name="botton_text">There are a few key points within the layout file that you need to be aware of. To use the bottom sheets widget, you must use a CoordinatorLayout container for the views. Towards the bottom of the file, you notice that there is a NestedScrollView containing a TextView.</string>
    <string name="day">Day</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="year">Year</string>
    <string name="backdrop_image">backdrop image</string>
    <string name="toolbar">toolbar</string>
    <string name="button_for_adding_new_stock_symbol">button for adding new stock symbol</string>
    <string name="company_name_and_symbol">company name and symbol</string>
    <string name="volume">Volume</string>
    <string name="select">Select</string>

    <string-array name="unit_arrays">
        <item>Day</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
</resources>
